# tradingStatisticsEngine

./: .env.example  .gitignore  260205220517MSFT_Dist_Peak_200D.md  AGENTS.md  CLAUDE.md  README.md  SETUP.md  TODOS.md  app.py  debug_analytics.py  debug_consolidated.py  main.py  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  reqv2.md
.doc/designs/: trading-engine-test-plan.md
.docs/designs/: trading-engine-ceo-plan.md  trading-engine-library.md
.github/workflows/: docs.yml
_legacy/: app.py
_legacy/pages/: 1_Factor_Analysis.py  3_Batch_Backtest.py
_legacy/src/: __init__.py
api/: deps.py  main.py  utils.py
api/routes/: backtest.py  events.py  factors.py  fundamentals.py  sweep.py
api/schemas/: backtest.py  common.py  events.py  factor.py  fundamentals.py
discussion_logs/: 260607 - new-low-analysis-risks-and-fundamentals.md
docs/: arch-review-20260318.md  index.md
docs/api/: constants.md  fmt.md  styling.md
frontend/: .env.production  package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: layout.tsx  (+1 more)
notebooks/: 01_data.ipynb  02_factors.ipynb  03_backtest.ipynb
pages/: 1_Signal_Analysis.py  2_Strategy_Backtest.py  3_Batch_Backtest.py  4_Parameter_Sweep.py
src/: analytics.py  constants.py  data_loader.py  ingestor.py  report.py  signals.py  styling.py  ui.py  visualizer.py
tests/: test_factors.py  test_rarity.py  test_registry_integrity_regression_1.py  test_signal_analytics.py  test_strategy_analytics.py
trading_engine/: __init__.py  constants.py  types.py
workflows/: log-discussion.md
(+250 files in other folders)
