[project]
name = "tradingstatisticsengine"
version = "0.1.0"
description = "Trading Statistics Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.0.0",
    "pandas>=2.2.0",
    "plotly[kaleido]>=6.5.2",
    "streamlit>=1.40.0",
    "vnstock>=3.5.0",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=8.0",
]
