[project]
name = "trading-engine"
version = "0.1.0"
description = "Trading Statistics Engine — library-first backtesting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "vnstock>=3.5.0",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
