[project]
name = "trading-engine"
version = "0.1.0"
description = "Trading Statistics Engine — library-first backtesting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightweight-charts>=2.1",
    "mplfinance>=0.12.10b0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "vnstock>=3.5.0",
    "yfinance>=1.1.0",
]

[dependency-groups]
api = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.42.0",
]
dev = [
    "pytest>=8.0",
]
